# tucuxi-core

./: .clang-format  .clang-tidy  .gitignore  README.rst  Readme.txt  readme.txt  setup.bat  setup.sh
Make/: Build.sh  (+6 more)
libs/: CMakeLists.txt  tucuxi-core_libs  tucuxi-core_libs.txt
libs/boost/: version.txt
libs/botan/: SourceWin.mak  makefile  tucuxi-core_add_botan  version.txt
libs/botan-2.1.0/: CMakeLists.txt  Makefile  README.txt  SourceLinux.mak  SourceWin.mak  botan_all.cpp  botan_all.h  botan_all_internal.h  include  makefile
libs/botan-2.19.3/: CMakeCache.txt  makefile
libs/cxxopts/: version.txt
libs/date/: version.txt
libs/eigen/: license.txt  version.txt
libs/fructose/: README.txt  VERSION.txt
libs/rapidjson/: version.txt
libs/rapidxml/: version.txt
libs/rapidxml-1.13/: rapidxml_print.hpp
libs/spdlog/: version.txt
libs/tiny-js/: CMakeLists.txt  TinyJS.cpp  TinyJS_Functions.cpp  TinyJS_MathFunctions.cpp  version.txt
libs/tiny-js-master-20170629/: TinyJS.cpp  TinyJS.h  TinyJS_Functions.cpp  TinyJS_Functions.h  TinyJS_MathFunctions.cpp  TinyJS_SyntaxTree.cpp  TinyJS_SyntaxTree.h  makefile
make/cmake/: .gitignore  CMakeLists.txt
src/tucucli/: CMakeLists.txt  clicomputer.cpp  clicomputer.h  makefile  tucucli.cpp
src/tucucommon/: CMakeLists.txt  basetypes.h  component.h  componentmanager.cpp  componentmanager.h  cryptohelper.cpp  cryptohelper.h  datetime.cpp  datetime.h  duration.cpp  duration.h  fingerprint.cpp  fingerprint.h  general.h  iimport.cpp  iimport.h  ilogger.h  interface.h  iterator.h  jsengine.cpp  jsengine.h  licensechecker.cpp  licensechecker.h  licensemanager.cpp  licensemanager.h  logger.cpp  logger.h  loggerhelper.cpp  loggerhelper.h  makefile  systeminfo.cpp  systeminfo.h  timeofday.cpp  timeofday.h  translatablestring.cpp  translatablestring.h  unit.cpp  unit.h  utils.cpp  utils.h  (+10 more)
src/tucucore/: CMakeLists.txt  aposteriorietascalculator.cpp  aposteriorietascalculator.h  cachecomputing.cpp  cachecomputing.h  cachedexponentials.cpp  cachedexponentials.h  cachedlogarithms.cpp  cachedlogarithms.h  computingadjustments.cpp  computingadjustments.h  computingcomponent.cpp  computingcomponent.h  computingrequestxmlexport.cpp  computingrequestxmlexport.h  computingresponseexport.cpp  computingresponseexport.h  computingresponsexmlexport.cpp  computingresponsexmlexport.h  computingutils.cpp  computingutils.h  concentrationcalculator.cpp  concentrationcalculator.h  concentrationprediction.h  corecomponent.cpp  corecomponent.h  covariate.h  covariateevent.cpp  covariateevent.h  covariateextractor.cpp  covariateextractor.h  cyclestatistics.cpp  cyclestatistics.h  cyclestatisticscalculator.cpp  cyclestatisticscalculator.h  definitions.h  deriv.h  dosage.cpp  dosage.h  drugdefinitions.h  (+121 more)
src/tucucrypto/: CMakeLists.txt  cryptohelper.cpp  cryptohelper.h  licensemanager.cpp  licensemanager.h  systeminfo.cpp  systeminfo.h
src/tucudrugfilechecker/: CMakeLists.txt  makefile  tucudrugfilechecker.cpp
src/tuculicense/: CMakeLists.txt  licensegenerator.cpp  licensegenerator.h  main.cpp  makefile
src/tucuquery/: CMakeLists.txt  administrativedata.cpp  administrativedata.h  computingquery.cpp  computingquery.h  computingqueryresponse.cpp  computingqueryresponse.h  computingqueryresponsexmlexport.cpp  computingqueryresponsexmlexport.h  computingresponseexport.cpp  computingresponseexport.h  computingresponsexmlexport.h  fullsample.cpp  fullsample.h  makefile  parametersdata.cpp  parametersdata.h  query.cpp  query.h  querycomputer.cpp  querycomputer.h  querydata.cpp  querydata.h  queryimport.cpp  queryimport.h  querylogger.cpp  querylogger.h  querystatus.h  querytocoreextractor.cpp  querytocoreextractor.h  requestdata.cpp  requestdata.h
src/tucusign/: CMakeLists.txt  ROOT_CA_PEM.pem  signature.cpp  signature.h  signer.h  signparser.cpp  signparser.h  signvalidator.cpp  signvalidator.h
src/tucuvalidator/: CMakeLists.txt  makefile  tucuvalidator.cpp
test/tucuall/: CMakeLists.txt  gtest_all.cpp
test/tucucommon/: CMakeLists.txt  gtest_common.cpp  gtest_componentmanager.cpp  gtest_datetime.cpp  gtest_iterator.cpp  gtest_logger.cpp  gtest_scriptengine.cpp  gtest_unit.cpp  gtest_xml.cpp  gtest_xmlimporter.cpp  makefile  test_componentmanager.h  test_cryptohelper.h  test_datetime.h  test_iterator.h  test_licensechecker.h  test_licensemanager.h  test_logger.h  test_scriptengine.h  test_unit.h  test_xml.h  test_xmlimporter.h  tests.cpp
test/tucucore/: CMakeLists.txt  computingresponsecomparator.cpp  computingresponsecomparator.h  gtest_cachecomputing.cpp  gtest_computingcomponentadjustments.cpp  gtest_computingcomponentadjustments2.cpp  gtest_computingcomponentattimes.cpp  gtest_computingcomponentconcentration.cpp  gtest_computingcomponentpercentiles.cpp  gtest_concentrationcalculator.cpp  gtest_core.cpp  gtest_core.h  gtest_covariateextractor.cpp  gtest_cyclestatistics.cpp  gtest_dosage.cpp  gtest_drugdomainconstraintsevaluator.cpp  gtest_drugmodelimport.cpp  gtest_drugmodelimport_xmlstrings.h  gtest_drugmodels.cpp  gtest_intakeextractor.cpp  gtest_intakeintervalcalculator.cpp  gtest_likelihood.cpp  gtest_multiconcentrationcalculator.cpp  gtest_multiconstanteliminationbolus.cpp  gtest_multilikelihood.cpp  gtest_nonmemdrugs.cpp  gtest_operablegraphmanager.cpp  gtest_operation.cpp  gtest_operationcollection.cpp  gtest_parameter.cpp  gtest_parameterextractor.cpp  gtest_percentilecalculator.cpp  gtest_pertinenttimescalculator.cpp  gtest_pkmodel.cpp  gtest_residualerrormodel.cpp  gtest_sampleextractor.cpp  gtest_tadcalculator.cpp  gtest_targetevaluator.cpp  gtest_targetextractor.cpp  gtest_tdacalculator.cpp  (+35 more)
test/tucucrypto/: CMakeLists.txt  gtest_cryptohelper.cpp  gtest_licensemanager.cpp  makefile  test_cryptohelper.h  test_licensemanager.h  tests.cpp
test/tucuquery/: CMakeLists.txt  gtest_dosageimportexport.cpp  gtest_mod202.cpp  gtest_query.cpp  gtest_query.h  gtest_query1comp.cpp  gtest_queryimport.cpp  gtest_queryinputstrings.h  makefile  test_dosageimportexport.cpp  test_dosageimportexport.h  test_query1comp.cpp  test_query1comp.h  tests.cpp
(+544 files in other folders)
