cmake_minimum_required(VERSION 2.8.0)
project(botan)

if(POLICY CMP0042)
cmake_policy(SET CMP0042 NEW)
endif()

set(BOTAN_SOURCES
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/asn1/alg_id.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/asn1/asn1_alt_name.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/asn1/asn1_attribute.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/asn1/asn1_obj.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/asn1/asn1_oid.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/asn1/asn1_str.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/asn1/asn1_time.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/asn1/ber_dec.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/asn1/der_enc.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/asn1/oids.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/asn1/x509_dn.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/base/scan_name.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/base/symkey.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/block/aes/aes.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/block/aes/aes_ni/aes_ni.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/block/aes/aes_ssse3/aes_ssse3.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/block/block_cipher.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/block/blowfish/blowfish.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/block/camellia/camellia.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/block/cascade/cascade.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/block/cast/cast128.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/block/cast/cast256.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/block/des/des.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/block/des/des_tab.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/block/des/desx.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/block/gost_28147/gost_28147.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/block/idea/idea.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/block/idea/idea_sse2/idea_sse2.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/block/kasumi/kasumi.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/block/lion/lion.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/block/misty1/misty1.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/block/noekeon/noekeon.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/block/noekeon/noekeon_simd/noekeon_simd.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/block/seed/seed.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/block/serpent/serpent.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/block/serpent/serpent_simd/serpent_simd.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/block/sm4/sm4.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/block/threefish/threefish.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/block/threefish/threefish_avx2/threefish_avx2.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/block/twofish/twofish.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/block/twofish/twofish_tab.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/block/xtea/xtea.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/codec/base64/base64.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/codec/hex/hex.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/entropy/darwin_secrandom/darwin_secrandom.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/entropy/dev_random/dev_random.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/entropy/entropy_srcs.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/entropy/proc_walk/proc_walk.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/entropy/rdrand/rdrand.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/ffi/ffi.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/filters/algo_filt.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/filters/basefilt.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/filters/buf_filt.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/filters/cipher_filter.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/filters/codec_filt/b64_filt.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/filters/codec_filt/hex_filt.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/filters/comp_filter.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/filters/data_snk.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/filters/fd_unix/fd_unix.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/filters/filter.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/filters/key_filt.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/filters/out_buf.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/filters/pipe.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/filters/pipe_io.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/filters/pipe_rw.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/filters/secqueue.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/filters/threaded_fork.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/hash/blake2/blake2b.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/hash/checksum/adler32/adler32.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/hash/checksum/crc24/crc24.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/hash/checksum/crc32/crc32.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/hash/comb4p/comb4p.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/hash/gost_3411/gost_3411.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/hash/hash.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/hash/keccak/keccak.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/hash/md4/md4.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/hash/md5/md5.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/hash/mdx_hash/mdx_hash.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/hash/par_hash/par_hash.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/hash/rmd160/rmd160.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/hash/sha1/sha160.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/hash/sha1/sha1_sse2/sha1_sse2.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/hash/sha2_32/sha2_32.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/hash/sha2_64/sha2_64.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/hash/sha3/sha3.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/hash/shake/shake.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/hash/skein/skein_512.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/hash/sm3/sm3.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/hash/tiger/tig_tab.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/hash/tiger/tiger.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/hash/whirlpool/whirlpool.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/hash/whirlpool/whrl_tab.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/kdf/hkdf/hkdf.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/kdf/kdf.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/kdf/kdf1/kdf1.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/kdf/kdf1_iso18033/kdf1_iso18033.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/kdf/kdf2/kdf2.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/kdf/prf_tls/prf_tls.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/kdf/prf_x942/prf_x942.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/kdf/sp800_108/sp800_108.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/kdf/sp800_56a/sp800_56a.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/kdf/sp800_56c/sp800_56c.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/mac/cbc_mac/cbc_mac.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/mac/cmac/cmac.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/mac/gmac/gmac.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/mac/hmac/hmac.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/mac/mac.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/mac/poly1305/poly1305.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/mac/siphash/siphash.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/mac/x919_mac/x919_mac.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/math/bigint/big_code.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/math/bigint/big_io.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/math/bigint/big_ops2.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/math/bigint/big_ops3.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/math/bigint/big_rand.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/math/bigint/bigint.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/math/bigint/divide.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/math/ec_gfp/curve_gfp.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/math/ec_gfp/curve_nistp.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/math/ec_gfp/point_gfp.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/math/mp/mp_comba.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/math/mp/mp_core.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/math/mp/mp_karat.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/math/mp/mp_monty.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/math/numbertheory/dsa_gen.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/math/numbertheory/jacobi.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/math/numbertheory/make_prm.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/math/numbertheory/mp_numth.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/math/numbertheory/numthry.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/math/numbertheory/pow_mod.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/math/numbertheory/powm_fw.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/math/numbertheory/powm_mnt.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/math/numbertheory/primes.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/math/numbertheory/reducer.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/math/numbertheory/ressol.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/misc/aont/package.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/misc/cryptobox/cryptobox.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/misc/fpe_fe1/fpe_fe1.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/misc/hotp/hotp.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/misc/hotp/totp.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/misc/rfc3394/rfc3394.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/misc/srp6/srp6.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/misc/tss/tss.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/modes/aead/aead.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/modes/aead/ccm/ccm.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/modes/aead/chacha20poly1305/chacha20poly1305.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/modes/aead/eax/eax.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/modes/aead/gcm/clmul/clmul.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/modes/aead/gcm/gcm.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/modes/aead/ocb/ocb.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/modes/aead/siv/siv.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/modes/cbc/cbc.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/modes/cfb/cfb.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/modes/cipher_mode.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/modes/mode_pad/mode_pad.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/modes/xts/xts.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/passhash/bcrypt/bcrypt.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/passhash/passhash9/passhash9.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pbkdf/pbkdf.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pbkdf/pbkdf1/pbkdf1.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pbkdf/pbkdf2/pbkdf2.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pbkdf/pgp_s2k/pgp_s2k.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pk_pad/eme.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pk_pad/eme_oaep/oaep.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pk_pad/eme_pkcs1/eme_pkcs.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pk_pad/eme_raw/eme_raw.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pk_pad/emsa.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pk_pad/emsa1/emsa1.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pk_pad/emsa_pkcs1/emsa_pkcs1.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pk_pad/emsa_pssr/pssr.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pk_pad/emsa_raw/emsa_raw.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pk_pad/emsa_x931/emsa_x931.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pk_pad/hash_id/hash_id.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pk_pad/iso9796/iso9796.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pk_pad/mgf1/mgf1.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/prov/pkcs11/p11.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/prov/pkcs11/p11_ecc_key.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/prov/pkcs11/p11_ecdh.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/prov/pkcs11/p11_ecdsa.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/prov/pkcs11/p11_mechanism.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/prov/pkcs11/p11_module.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/prov/pkcs11/p11_object.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/prov/pkcs11/p11_randomgenerator.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/prov/pkcs11/p11_rsa.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/prov/pkcs11/p11_session.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/prov/pkcs11/p11_slot.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/prov/pkcs11/p11_x509.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/blinding.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/cecpq1/cecpq1.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/curve25519/curve25519.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/curve25519/donna.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/dh/dh.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/dl_algo/dl_algo.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/dl_group/dl_group.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/dl_group/dl_named.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/dlies/dlies.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/dsa/dsa.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/ec_group/ec_group.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/ec_group/ec_named.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/ecc_key/ecc_key.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/ecdh/ecdh.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/ecdsa/ecdsa.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/ecgdsa/ecgdsa.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/ecies/ecies.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/eckcdsa/eckcdsa.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/ed25519/ed25519.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/ed25519/ed25519_fe.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/ed25519/ed25519_key.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/ed25519/ge.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/ed25519/sc_muladd.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/ed25519/sc_reduce.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/elgamal/elgamal.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/gost_3410/gost_3410.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/keypair/keypair.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/mce/code_based_key_gen.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/mce/gf2m_rootfind_dcmp.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/mce/gf2m_small_m.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/mce/goppa_code.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/mce/mce_workfactor.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/mce/mceliece.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/mce/mceliece_key.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/mce/polyn_gf2m.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/mceies/mceies.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/newhope/newhope.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/pbes2/pbes2.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/pem/pem.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/pk_algs.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/pk_keys.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/pk_ops.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/pkcs8.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/pubkey.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/rfc6979/rfc6979.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/rsa/rsa.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/sm2/sm2.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/workfactor.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/x509_key.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/xmss/xmss_common_ops.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/xmss/xmss_hash.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/xmss/xmss_index_registry.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/xmss/xmss_parameters.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/xmss/xmss_privatekey.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/xmss/xmss_publickey.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/xmss/xmss_signature.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/xmss/xmss_signature_operation.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/xmss/xmss_verification_operation.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/xmss/xmss_wots_common_ops.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/xmss/xmss_wots_parameters.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/xmss/xmss_wots_privatekey.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/xmss/xmss_wots_publickey.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/xmss/xmss_wots_signature_operation.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/pubkey/xmss/xmss_wots_verification_operation.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/rng/auto_rng/auto_rng.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/rng/hmac_drbg/hmac_drbg.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/rng/rdrand_rng/rdrand_rng.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/rng/rng.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/rng/stateful_rng/stateful_rng.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/rng/system_rng/system_rng.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/stream/chacha/chacha.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/stream/chacha/chacha_sse2/chacha_sse2.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/stream/ctr/ctr.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/stream/ofb/ofb.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/stream/rc4/rc4.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/stream/salsa20/salsa20.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/stream/shake_cipher/shake_cipher.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/stream/stream_cipher.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/tls/credentials_manager.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/tls/msg_cert_req.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/tls/msg_cert_status.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/tls/msg_cert_verify.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/tls/msg_certificate.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/tls/msg_client_hello.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/tls/msg_client_kex.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/tls/msg_finished.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/tls/msg_hello_verify.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/tls/msg_server_hello.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/tls/msg_server_kex.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/tls/msg_session_ticket.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/tls/sessions_sql/tls_session_manager_sql.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/tls/tls_alert.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/tls/tls_blocking.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/tls/tls_callbacks.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/tls/tls_cbc/tls_cbc.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/tls/tls_channel.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/tls/tls_ciphersuite.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/tls/tls_client.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/tls/tls_extensions.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/tls/tls_handshake_hash.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/tls/tls_handshake_io.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/tls/tls_handshake_state.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/tls/tls_policy.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/tls/tls_record.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/tls/tls_server.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/tls/tls_session.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/tls/tls_session_key.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/tls/tls_session_manager_memory.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/tls/tls_suite_info.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/tls/tls_version.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/utils/assert.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/utils/barrier.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/utils/calendar.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/utils/charset.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/utils/cpuid.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/utils/data_src.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/utils/dyn_load/dyn_load.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/utils/filesystem.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/utils/http_util/http_util.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/utils/mem_ops.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/utils/os_utils.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/utils/parsing.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/utils/read_cfg.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/utils/semaphore.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/utils/version.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/x509/cert_status.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/x509/certstor.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/x509/certstor_sql/certstor_sql.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/x509/crl_ent.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/x509/datastor.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/x509/key_constraint.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/x509/name_constraint.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/x509/ocsp.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/x509/ocsp_types.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/x509/pkcs10.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/x509/x509_ca.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/x509/x509_crl.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/x509/x509_ext.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/x509/x509_obj.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/x509/x509cert.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/x509/x509opt.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/x509/x509path.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/src/lib/x509/x509self.cpp"
)

set(BOTAN_CLI
)

set(BOTAN_TESTS
)

set_source_files_properties("${CMAKE_CURRENT_LIST_DIR}/src/lib/block/aes/aes_ni/aes_ni.cpp" PROPERTIES COMPILE_FLAGS "-maes -mpclmul -mssse3")
set_source_files_properties("${CMAKE_CURRENT_LIST_DIR}/src/lib/block/aes/aes_ssse3/aes_ssse3.cpp" PROPERTIES COMPILE_FLAGS "-mssse3")
set_source_files_properties("${CMAKE_CURRENT_LIST_DIR}/src/lib/block/idea/idea_sse2/idea_sse2.cpp" PROPERTIES COMPILE_FLAGS "-msse2")
set_source_files_properties("${CMAKE_CURRENT_LIST_DIR}/src/lib/block/noekeon/noekeon_simd/noekeon_simd.cpp" PROPERTIES COMPILE_FLAGS "-msse2")
set_source_files_properties("${CMAKE_CURRENT_LIST_DIR}/src/lib/block/serpent/serpent_simd/serpent_simd.cpp" PROPERTIES COMPILE_FLAGS "-msse2")
set_source_files_properties("${CMAKE_CURRENT_LIST_DIR}/src/lib/block/threefish/threefish_avx2/threefish_avx2.cpp" PROPERTIES COMPILE_FLAGS "-mavx2")
set_source_files_properties("${CMAKE_CURRENT_LIST_DIR}/src/lib/hash/sha1/sha1_sse2/sha1_sse2.cpp" PROPERTIES COMPILE_FLAGS "-msse2")
set_source_files_properties("${CMAKE_CURRENT_LIST_DIR}/src/lib/modes/aead/gcm/clmul/clmul.cpp" PROPERTIES COMPILE_FLAGS "-maes -mpclmul -mssse3")
set_source_files_properties("${CMAKE_CURRENT_LIST_DIR}/src/lib/rng/rdrand_rng/rdrand_rng.cpp" PROPERTIES COMPILE_FLAGS "-mrdrnd")
set_source_files_properties("${CMAKE_CURRENT_LIST_DIR}/src/lib/stream/chacha/chacha_sse2/chacha_sse2.cpp" PROPERTIES COMPILE_FLAGS "-msse2")

option(ENABLED_OPTIONAL_WARINIGS "If enabled more strict warinig policy will be used" OFF)
option(ENABLED_LTO "If enabled link time optimization will be used" OFF)

set(COMPILER_FEATURES_RELEASE -std=c++11 -D_REENTRANT -O3 -momit-leaf-frame-pointer -fstack-protector -m64 -pthread)
set(COMPILER_FEATURES_DEBUG -std=c++11 -D_REENTRANT -g -momit-leaf-frame-pointer -fstack-protector -m64 -pthread)
set(COMPILER_FEATURES $<$<NOT:$<CONFIG:DEBUG>>:${COMPILER_FEATURES_RELEASE}>  $<$<CONFIG:DEBUG>:${COMPILER_FEATURES_DEBUG}>)
set(SHARED_FEATURES -fPIC -fvisibility=hidden)
set(STATIC_FEATURES -DBOTAN_DLL=)
set(COMPILER_WARNINGS -Wall -Wextra -Wpedantic -Wstrict-aliasing -Wstrict-overflow=5 -Wcast-align -Wmissing-declarations -Wpointer-arith -Wcast-qual -Wzero-as-null-pointer-constant -Wnon-virtual-dtor)
set(COMPILER_INCLUDE_DIRS build/include build/include/external)
if(ENABLED_LTO)
    set(COMPILER_FEATURES ${COMPILER_FEATURES} -lto)
endif()
if(ENABLED_OPTIONAL_WARINIGS)
    set(COMPILER_OPTIONAL_WARNINGS -Wsign-promo -Wctor-dtor-privacy -Wdeprecated -Winit-self -Wnon-virtual-dtor -Wunused-macros -Wold-style-cast -Wuninitialized)
endif()

add_library(${PROJECT_NAME} STATIC ${BOTAN_SOURCES})
target_link_libraries(${PROJECT_NAME} PUBLIC "-framework Security" dl)
target_compile_options(${PROJECT_NAME} PUBLIC ${COMPILER_WARNINGS} ${COMPILER_FEATURES} ${COMPILER_OPTIONAL_WARNINGS} PRIVATE ${STATIC_FEATURES})
target_include_directories(${PROJECT_NAME} PUBLIC ${COMPILER_INCLUDE_DIRS})

set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${PROJECT_NAME}-static)

add_library(${PROJECT_NAME}_shared SHARED ${BOTAN_SOURCES})
target_link_libraries(${PROJECT_NAME}_shared PUBLIC "-framework Security" dl)
target_compile_options(${PROJECT_NAME}_shared PUBLIC ${COMPILER_WARNINGS} ${COMPILER_FEATURES} ${COMPILER_OPTIONAL_WARNINGS} PRIVATE ${SHARED_FEATURES})
target_include_directories(${PROJECT_NAME}_shared PUBLIC ${COMPILER_INCLUDE_DIRS})
set_target_properties(${PROJECT_NAME}_shared PROPERTIES OUTPUT_NAME ${PROJECT_NAME})

set(CONFIGURATION_FILES configure.py .gitignore .astylerc authors.txt news.rst readme.rst)
file(GLOB_RECURSE DOCUMENTATION_FILES doc/* )
file(GLOB_RECURSE HEADER_FILES src/*.h )
file(GLOB_RECURSE INFO_FILES src/lib/*info.txt )
add_custom_target(CONFIGURATION_DUMMY SOURCES ${CONFIGURATION_FILES} ${DOCUMENTATION_FILES} ${INFO_FILES} ${HEADER_FILES})
